@@ -1,3 +1,9 @@
+2006-12-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* libgdict/gdict-defbox.c: Use the same default colors as
+	GTK+ for both links and visited links; free the colors
+	returned by gtk_widget_style_get().
+
 2006-12-01  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* data/Makefile.am:
